Added an InstructionIterator inner class, and changed the instructionIterator() method to use it.  InstructionIterator has a duplicate() method, which makes an exact copy which does not affect the original.  This is useful for nondeterministic bytecode searches.
git-svn-id: https://findbugs.googlecode.com/svn/trunk@704 eae3c2d3-9b19-0410-a86e-396b6ccb6ab3